2022-09-15T02:04:09Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3057309964
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 90 133 / 95 138
* notice: next accum: outdated-unq outdated-all / unq all: 94 138 / 98 142
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-31] / []

2022-09-14T16:26:49Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3054444931
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 90 133 / 98 142
* notice: next accum: outdated-unq outdated-all / unq all: 90 133 / 95 138
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -4 / +4 +5 -3 -4 / 1 1
* notice: removed / changed dates: [] / [2022-08-31]

2022-09-14T08:24:29Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3051255990
* notice: last 14d: unq all: 5 9
* notice: prev accum: outdated-unq outdated-all / unq all: 90 133 / 97 141
* notice: next accum: outdated-unq outdated-all / unq all: 90 133 / 98 142
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-14]

2022-09-13T08:24:08Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3043480860
* notice: last 14d: unq all: 5 8
* notice: prev accum: outdated-unq outdated-all / unq all: 90 133 / 96 140
* notice: next accum: outdated-unq outdated-all / unq all: 90 133 / 97 141
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-13]

2022-09-13T02:01:46Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3041848793
* notice: last 14d: unq all: 5 7