@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-15T02:04:09Z",
+  "timestamp" : "2022-09-15T08:27:25Z",
   "count_outdated" : 138,
   "uniques_outdated" : 94,
-  "count" : 142,
-  "uniques" : 98,
+  "count" : 143,
+  "uniques" : 99,
   "clones" : [
     {
       "timestamp": "2022-09-02T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-09-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
