@@ -1,3 +1,11 @@
+2022-09-15T08:27:25Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3058918871
+* notice: last 14d: unq all: 2 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 94 138 / 98 142
+* notice: next accum: outdated-unq outdated-all / unq all: 94 138 / 99 143
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-15]
+
 2022-09-15T02:04:09Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3057309964
 * notice: last 14d: unq all: 2 4
